--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -21,6 +21,6 @@
     "noImplicitAny": false,
     "strictBindCallApply": false,
     "noFallthroughCasesInSwitch": false,
-    "types": ["node"]
+    "typeRoots": ["./node_modules/@types"]
   }
 }
