--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       - PORT=3000
       # DATABASE_URL, JWT_*, SMTP_*, etc. come from backend/.env
     ports:
-      - "3000:3000"
+      - "3001:3000"   # host:container — use 3001 if 3000 is in use locally
     # If using local Postgres instead of Neon, uncomment:
     # depends_on:
     #   postgres:
